// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationSystem /> snapshot should match snapshot 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="top-right"
    style="z-index: 10000;"
  >
    <div
      class="Toastify"
      id="medium_notification_container"
    />
    <div
      class="Toastify"
      id="low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with className 1`] = `
<div>
  <div
    class="md-notification-system-wrapper example-class"
    data-position="top-right"
    style="z-index: 10000;"
  >
    <div
      class="Toastify"
      id="medium_notification_container"
    />
    <div
      class="Toastify"
      id="low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with different attention type than default 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="top-right"
    style="z-index: 10000;"
  >
    <div
      class="Toastify"
      id="medium_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Toastify"
      id="low_notification_container"
    />
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with different position than default 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="bottom-right"
    style="z-index: 10000;"
  >
    <div
      class="Toastify"
      id="low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--bottom-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
    <div
      class="Toastify"
      id="medium_notification_container"
    />
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with different zIndex than default 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="top-right"
    style="z-index: 9898;"
  >
    <div
      class="Toastify"
      id="medium_notification_container"
    />
    <div
      class="Toastify"
      id="low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with id 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="top-right"
    style="z-index: 10000;"
  >
    <div
      class="Toastify"
      id="example-id_medium_notification_container"
    />
    <div
      class="Toastify"
      id="example-id_low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationSystem /> snapshot should match snapshot with style 1`] = `
<div>
  <div
    class="md-notification-system-wrapper"
    data-position="top-right"
    style="color: pink; z-index: 10000;"
  >
    <div
      class="Toastify"
      id="medium_notification_container"
    />
    <div
      class="Toastify"
      id="low_notification_container"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default slideInRight"
          id="123456"
          style="--nth: 1; --len: 1;"
        >
          <div
            class="Toastify__toast-body"
            role="alert"
          >
            <div>
              <div
                class="md-toast-notification-wrapper md-modal-container-wrapper"
                data-color="primary"
                data-elevation="0"
                data-padded="true"
                data-round="50"
              >
                <div
                  class="md-toast-notification-body"
                >
                  <div
                    class="md-toast-notification-leading-visual"
                  >
                    <div
                      class="md-icon-wrapper icon"
                    >
                      <svg
                        class=""
                        data-autoscale="false"
                        data-scale="24"
                        data-test="info-circle"
                        height="100%"
                        style="fill: lightblue;"
                        viewBox="0, 0, 32, 32"
                        width="100%"
                      />
                    </div>
                  </div>
                  <p
                    class="md-text-wrapper md-toast-notification-text"
                    data-type="body-primary"
                  >
                    This is a test
                  </p>
                  <div
                    class="md-toast-notification-close-button"
                  >
                    <button
                      aria-pressed="false"
                      class="md-button-circle-wrapper md-button-simple-wrapper"
                      data-color="primary"
                      data-disabled="false"
                      data-ghost="true"
                      data-multiple-children="false"
                      data-outline="false"
                      data-selected="false"
                      data-size="20"
                      type="button"
                    >
                      <div
                        class="md-icon-wrapper"
                      >
                        <svg
                          class=""
                          data-autoscale="false"
                          data-scale="16"
                          data-test="cancel"
                          fill="currentColor"
                          height="100%"
                          viewBox="0, 0, 32, 32"
                          width="100%"
                        />
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            role="progressbar"
            style="animation-duration: 3000ms; animation-play-state: paused; opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
